added inventory file

--- a/roles/common/tasks/app-code-download.yaml
+++ b/roles/common/tasks/app-code-download.yaml
@@ -1,5 +1,5 @@
 - name: download "{{ component }}" code
-  ansible.builitin.get_url:
+  ansible.builtin.get_url:
     url: https://roboshop-artifacts.s3.amazonaws.com/"{{component}}"-v3.zip 
     dest: /tmp/"{{ component }}".zip
 
