--- a/roles/common/tasks/app-code-download.yaml
+++ b/roles/common/tasks/app-code-download.yaml
@@ -1,6 +1,6 @@
 - name: download "{{ component }}" code
   ansible.builtin.get_url:
-    url: https://roboshop-artifacts.s3.amazonaws.com/"{{component}}"-v3.zip 
+    url: https://roboshop-artifacts.s3.amazonaws.com/{{component}}-v3.zip 
     dest: /tmp/"{{ component }}".zip
 
 - name: unzip "{{ component }}"
