--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -48,7 +48,7 @@
     msg: "{{ catalogue_output }}"
 
 - name: Load Product informaiton if there is no data
-  ansible.builtin.command: mongosh --host mongodb.singireddy.shop </app/db/master-data.js
+  ansible.builtin.shell: mongosh --host mongodb.singireddy.shop </app/db/master-data.js
   when: catatalogue_output.stdout | int < 0
 
     
