--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -33,11 +33,13 @@
   ansible.builtin.unarchive:
     src: /tmp/frontend.zip
     dest: /usr/share/nginx/html
+    remote_src: yes
 
 - name: download the contents
   ansible.builtin.include_role:
     name: common
     tasks_from: app-code-download.yaml
+
 - name: service restart
   ansible.builtin.service:
     name: nginx
