--- a/roles/common/tasks/app-code-download.yaml
+++ b/roles/common/tasks/app-code-download.yaml
@@ -1,3 +1,9 @@
+
+- name: setting "{{ component }}".service
+  ansible.builtin.template:
+    src: catalogue.service.j2
+    dest: /etc/systemd/system/catalogue.service
+
 - name: download "{{ component }}" code
   ansible.builtin.get_url:
     url: https://roboshop-artifacts.s3.amazonaws.com/{{component}}-v3.zip 
