--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -20,7 +20,7 @@
     state: present
 
 - name: setting "{{ component }}".service
-  ansible.builtin.include.role:
+  ansible.builtin.include_role:
     name: common
     tasks_from: app-code-download.yaml
 
